--- a/Project 2- Reproducible Research.Rmd
+++ b/Project 2- Reproducible Research.Rmd
@@ -6,25 +6,234 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
+        library(dplyr)
+        library(ggplot2)
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+## Synopsis
+Two main questions are addressed in this report:
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+1. Across the United States, which types of events are most harmful with respect to population health?
+2. Across the United States, which types of events have the greatest economic consequences?
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
-```{r cars}
-summary(cars)
+
+## Data Processing
+
+Data was loaded from web-based database. Next, the downloaded file was used to create a data frame and inspected to facilitate future working. 
+    
+```{r data-loading, cache=TRUE, results='hide'}
+        #download and read in data
+        url <- "https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2FStormData.csv.bz2"
+        destfile <- "StormData.csv.bz2"  # fixed file name
+        #download the file if it doesn't already exist
+        if(!file.exists(destfile)) {
+                download.file(url, destfile, mode = "wb")
+        }
+        #read the compressed CSV file
+        stormdata <- read.csv(bzfile(destfile))
+        #inspect data to aid later working
+        str(stormdata)
+        names(stormdata)
 ```
 
-## Including Plots
+<br><br>
 
-You can also embed plots, for example:
+To answer these questions the original data was modified into three groups.
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+1. Total fatalities by weather event.
+2. Total fatalities and injuries by weather event.
+3. Total cost of property and crop damage per weather event. 
+
+
+First the data is compiling by total fatalities per weather event (EVTYPE) and the top 5 most fatal weather events are selected.  
+
+```{r}
+        #group fatalities by event type
+        fatalities_by_event <- stormdata %>%
+            group_by(EVTYPE) %>%
+            summarise(total_fatalities = sum(FATALITIES, na.rm = TRUE)) %>%
+            filter(total_fatalities > 0) %>%
+            arrange(desc(total_fatalities))
+        #select the top 5
+        top_fatalities <- fatalities_by_event %>% top_n(5, total_fatalities)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+Second the data is complied by total fatalities and total injuries per event and the top 5 most harmful events are selected.
+
+```{r}
+        #find most dangerous events by combining fatalities and injuries
+            health_impact <- stormdata %>%
+                group_by(EVTYPE) %>%
+                summarise(total_health = sum(FATALITIES + INJURIES, na.rm = TRUE)) %>%
+                filter(total_health > 0) %>%
+                arrange(desc(total_health))
+            #reorder data
+            top_health <- health_impact %>% top_n(5, total_health)
+```
+
+This data will be used to answer which types of events are most harmful to population health. 
+
+<br><br>
+
+Lastly, the data is modified to address total economic damage by compiled by total property and crop damage. 
+
+Property damage and crop damage is first calculated in a dollar amount since this is not given in the original data. 
+
+```{r}
+          #convert symbols to multipliers
+            exp_to_multiplier <- function(exp) {
+                if(exp %in% c("", "0")) {
+                    1
+                } else if(exp %in% c("K", "k")) {
+                    1e3
+                } else if(exp %in% c("M", "m")) {
+                    1e6
+                } else if(exp %in% c("B", "b")) {
+                    1e9
+                } else {
+                    1
+                }
+            }
+            #create multiplier columns for property and crop damage
+            stormdata$prop_multiplier <- sapply(stormdata$PROPDMGEXP, exp_to_multiplier)
+            stormdata$crop_multiplier <- sapply(stormdata$CROPDMGEXP, exp_to_multiplier)
+            #calculate property and crop damages in dollars
+            stormdata$prop_dollars <- stormdata$PROPDMG * stormdata$prop_multiplier
+            stormdata$crop_dollars <- stormdata$CROPDMG * stormdata$crop_multiplier
+            #find total economic damage and create column for this
+            stormdata$total_damage <- stormdata$prop_dollars + stormdata$crop_dollars
+```
+
+Then, the total cost of property and crop damage per weather event is calculated. The top 10 most costly events are selected. 
+
+```{r}
+            #find total damage by event type
+            damage_by_event <- stormdata %>%
+                group_by(EVTYPE) %>%
+                summarise(total_damage = sum(total_damage, na.rm = TRUE)) %>%
+                filter(total_damage > 0) %>%
+                arrange(desc(total_damage))
+            #select  top 10 events
+            top_damage <- damage_by_event %>% top_n(10, total_damage)
+```
+
+This data will be used to answer which types of events have the greatest economic consequence.
+
+
+## Results
+
+We will first address population health in two parts. 
+
+First, by looking solely at fatalities from each weather events to determine which storms are the most deadly overall. 
+
+```{r}
+        ggplot(top_fatalities, aes(x = reorder(EVTYPE, total_fatalities), y = total_fatalities)) +
+            geom_bar(stat = "identity", fill = "red") +
+            coord_flip() +
+            labs(title = "Top 5 Events by Fatalities",
+                 x = "Weather Event",
+                 y = "Total Fatalities")
+```
+
+Tornadoes are the most dangerous weather event for overall deaths and excessive heat is second.
+
+<br><br>
+
+Knowing the percent of overall deaths due to storm related fatalities can help put their impact in perspective. 
+
+```{r}
+        #find overall fatalities from the dataset
+        overall_fatalities <- sum(stormdata$FATALITIES, na.rm = TRUE)
+        #find the percentage contribution for each top event
+        top_fatalities <- top_fatalities %>%
+            mutate(percentage = total_fatalities / overall_fatalities * 100)
+        #make a pretty table for the report
+        fatalities_table <- top_fatalities %>%
+                mutate(Percentage = round(percentage, 2)) %>%
+                select(Weather_Event = EVTYPE, Percentage) %>%
+                head(3)
+        #print table
+        knitr::kable(fatalities_table)
+        
+```
+
+This confirms that tornadoes account for almost 40% of fatalities due to weather related events. 
+
+<br><br>
+Next, we will look at fatalities and injuries to see which weather events have the largest impact on population health. 
+
+```{r}
+   ggplot(top_health, aes(x = reorder(EVTYPE, total_health), y = total_health)) +
+                geom_bar(stat = "identity", fill = "blue") +
+                coord_flip() +
+                labs(title = "Top 5 Events by Total Health Impact",
+                     x = "Total Health Impact (Fatalities + Injuries)",
+                     y = "Weather Event")
+```
+         
+This shows that tornado are the most harmful to overall health. Excessive heat is next but a much smaller portion of risk to population health. 
+ 
+To further demonstrate the amount of risk these events pose, the percentage of overall health impact is calculated. 
+
+```{r}
+            #find overall injuries from the dataset
+            overall_health <- sum(stormdata$FATALITIES + stormdata$INJURIES, na.rm = TRUE)
+            #find the percentage contribution for each top event
+            top_health <- top_health %>%
+                mutate(percentage = total_health / overall_health * 100)
+            #make a pretty table for the report
+            health_table <- top_health %>%
+                    mutate(Percentage = round(percentage, 2)) %>%
+            select(Weather_Event = EVTYPE, Percentage) %>%
+                    head(5)
+            #print table
+            knitr::kable(health_table)
+```
+
+Tornadoes account for about 60% of all storm related injuries and deaths, and all others events account for less than 6%. 
+
+This confirms that tornadoes are the largest risk to population health of all storm related events.
+
+<br><br>
+
+Now we address economic consequences by looking at which weather events cause the most economic damage to property and crops. 
+
+```{r}
+            # Create a horizontal bar plot of the top events by economic damage
+            ggplot(top_damage, aes(x = reorder(EVTYPE, total_damage), y = total_damage)) +
+                geom_bar(stat = "identity", fill = "orange") +
+                coord_flip() +
+                labs(title = "Top 10 Events by Economic Consequences",
+                     x = "Weather Event Type",
+                     y = "Total Damage (USD)") +
+                scale_y_continuous(labels = scales::dollar_format())
+```
+
+Flood contribute to the largest economic damage, followed by typhoons/hurricanes, and again by tornadoes. 
+
+It is worth poitning out that flood damage appears to be more than double the damage cause by any other weather event. 
+
+We will confirm this with a percentage analysis of overall damage. 
+
+```{r}
+            #find overall economic damage across all events
+            overall_damage <- sum(stormdata$total_damage, na.rm = TRUE)
+            #find percentage contribution for each top event
+            top_damage <- top_damage %>%
+                mutate(percentage = total_damage / overall_damage * 100) 
+            #make it look pretty in a table 
+            damage_table <- top_damage %>%
+                    mutate(Percentage = round(percentage, 2)) %>%
+                    select(Weather_Event = EVTYPE, Percentage) %>%
+            head(5)
+            #print table
+            knitr::kable(damage_table)
+```
+
+This confirms that floods pose the largest economic risk, and are more than double the economic damage of any other weather event.
+
+Also, hurricane/typhoons and tornadoes combined pose almost as large an economic risk as floods. 
+
+
